# validate-git-blame-ignore-revs

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  Justfile  README.md  pyproject.toml
.github/workflows/: ci.yml  test_and_package.yml  zizmor.yml
src/: lib.rs  main.rs
src/validate_git_blame_ignore_revs/: __init__.py  __main__.py  lib.py
tests/: test_against_mocks.py  test_real_world_cclib_pygit2.py  test_real_world_sstcore_dulwich.py  test_real_world_sstcore_pygit2.py
tools/: versioningit_override.py
