[project]
name = "validate-git-blame-ignore-revs"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eric Berquist", email = "eric.berquist@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
validate-git-blame-ignore-revs = "validate_git_blame_ignore_revs.__main__:main"

[build-system]
requires = ["setuptools>=61.0", "versioningit>=3.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "dulwich>=0.24.1",
    "pygit2>=1.15.1",
    "pytest-cov>=6.2.1",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.setuptools]
zip-safe = false

[tool.versioningit.format]
method = {module = "versioningit_override", value = "versioningit_format", module-dir = "tools"}

[tool.versioningit.template-fields.version-tuple]
pep440 = true

[tool.versioningit.vcs]
method = "git"
match = ["v*"]

[tool.versioningit.write]
file = "src/validate_git_blame_ignore_revs/_version.py"
