[project]
name = "validate-git-blame-ignore-revs"
version = "0.1.0"
description = "Ensure a .git-blame-ignore-revs file is correct"
readme = "README.md"
authors = [
    { name = "Eric Berquist", email = "eric.berquist@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
validate-git-blame-ignore-revs = "validate_git_blame_ignore_revs.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "dulwich>=0.24.1",
    "pygit2>=1.15.1",
    "pytest-cov>=6.2.1",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.setuptools]
zip-safe = false
